# vision_slam

./: Cargo.toml
crates/imu/: Cargo.toml  gt.csv  imu.csv
crates/imu/src/: integrator.rs  lib.rs
crates/imu/tests/: integrator_test.rs
crates/map_matching/: Cargo.toml  build.rs  output.json  pyproject.toml
crates/map_matching/examples/: location.rs
crates/map_matching/src/: errors.rs  estimator.rs  lib.rs  location.rs  macros.rs  tracker.rs  types.rs
crates/map_matching/src/extractor/: errors.rs  extractor.rs  mod.rs  traits.rs  types.rs
crates/map_matching/src/extractor/backend/: onnx_backend.rs  vino_backend.rs
crates/map_matching/src/matcher/: errors.rs  matcher.rs  mod.rs  traits.rs  types.rs  vector_client.rs
crates/map_matching/src/matcher/backend/: mod.rs  onnx_backend.rs  vino_backend.rs
crates/map_matching/tests/: coord.rs  matcher_test.rs
crates/vio/: Cargo.toml
crates/vio/src/: camera.rs  lib.rs
crates/vio/src/matcher/: mod.rs
crates/vio/src/matcher/backend/: mod.rs
examples/: euroc.rs
src/: prelude.rs
tests/: feature.rs
