[package]
name = "vision_slam"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/*"
]


[workspace.dependencies]
nalgebra = { version = "0.34.1" }
opencv = { version = "0.97.2", features = ["clang-runtime"] }
serde = { version = "1.0", features = ["derive"] }


[dependencies]
tracker = { path = "crates/tracker" }
imu = { path = "crates/imu" }
feature = { path = "crates/feature" }
