[package]
name = "vision_slam"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/*"
]


[workspace.dependencies]
nalgebra = { version = "0.34.1" }
opencv = { version = "0.98.0", features = ["clang-runtime"] }
serde = { version = "1.0", features = ["derive"] }
bevy_app = "0.17.3"
bevy_ecs = "0.17.3"
bevy_time = "0.17.3"
bevy_log = "0.17.3"
rand = "0.9.2"

[dependencies]
tracker = { path = "crates/tracker" }
imu = { path = "crates/imu" }
feature = { path = "crates/feature" }

