[package]
name = "monocular-inertial-map-localization"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/*"
]


[workspace.dependencies]
nalgebra = { version = "0.34.1" }
opencv = { version = "0.98.0", features = ["clang-runtime"] }
serde = { version = "1.0", features = ["derive"] }
bevy_app = "0.17.3"
bevy_ecs = "0.17.3"
bevy_time = "0.17.3"
bevy_log = "0.17.3"
rand = "0.9.2"
thiserror = "2.0.17"
anyhow = "1.0.100"
rayon = "1.11.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }



[dependencies]
vio = { path = "crates/vio" }
imu = { path = "crates/imu" }
map_matching = { path = "crates/map_matching" }
optimizer = { path = "crates/optimizer" }
